dark mode is partially fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@
 
 body {
   font-family: "DM sans";
-  scroll-behavior: smooth;
 }
 
 .logo {
